# webtronic_app

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
apps/: database.py  server.py
apps/posts_app/: posts_models.py  posts_routers.py
apps/users_app/: users_model.py  users_routers.py  users_utils.py
